force-app/main/default/objects/Account/fields/City2__c.field-meta.xml
<CustomField>
    <fullName>City2__c</fullName>
    <label>City2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>