force-app/main/default/objects/Account/fields/Total_contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_contacts__c</fullName>
    <label>Total_contacts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>