force-app/main/default/objects/Account/recordTypes/Demo_Layout.recordType-meta.xml
<RecordType>
    <fullName>Demo_Layout</fullName>
    <active>true</active>
    <label>Demo Layout</label>
</RecordType>